# nomad-api-python

./: README.md  docker-compose.yml  frontend.py  job.hcl.j2  main.py  makefile  nomadconfig.hcl  pyproject.toml
nomad/: job.hcl.j2  nomadconfig.hcl
pinetree/: models.py  nomad.py  ui.py
