[tool.poetry]
name = "trying-nomad-python"
version = "0.1.0"
description = ""
authors = ["Inveracity <cbaklid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
