[tool.poetry]
name = "trying-nomad-python"
version = "0.1.0"
description = ""
authors = ["Inveracity <cbaklid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
streamlit = "^1.34.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
